# nanobot

./: Dockerfile  README.md  SECURITY.md  aegis.txt  core_agent_lines.sh  pyproject.toml
aegis/: __init__.py  __main__.py
aegis/agent/: __init__.py  contemplation.py  context.py  experience.py  identity.py  loop.py  memory.py  subagent.py
aegis/agent/tools/: __init__.py  cron.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  web.py
aegis/bus/: __init__.py  queue.py
aegis/channels/: __init__.py  base.py  discord.py  feishu.py  manager.py  telegram.py  whatsapp.py
aegis/cli/: __init__.py  commands.py
aegis/config/: __init__.py  loader.py  schema.py
aegis/cron/: __init__.py  service.py
aegis/heartbeat/: __init__.py
aegis/providers/: __init__.py  litellm_provider.py
aegis/session/: __init__.py  manager.py
aegis/skills/: README.md
aegis/skills/cron/: SKILL.md
aegis/skills/github/: SKILL.md
aegis/skills/summarize/: SKILL.md
aegis/skills/tmux/: SKILL.md
aegis/skills/tmux/scripts/: find-sessions.sh
aegis/skills/weather/: SKILL.md
aegis/utils/: __init__.py  helpers.py
tests/: test_docker.sh  test_tool_validation.py
